@@ -1,4 +1,4 @@
-Copyright (c) 2015-2016 Intel, Inc.  All rights reserved.
+Copyright (c) 2015-2018 Intel, Inc. All rights reserved.
 Copyright (c) 2016-2017 IBM Corporation.  All rights reserved.
 $COPYRIGHT$
 
@@ -29,6 +29,7 @@ current release as well as the "stable" bug fix release branch.
 - Fix cross-version issue when v1.2 client interacts with v2.1 server (PR #564)
 - Update client connection for cross-version support (PR #591)
 - Fix write memory barrier ASM for PowerPC (PR #606)
+- Add protection from overly-large messages
 
 
 1.2.4 -- 13 Oct. 2017
